--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <header>
+    <a href="index.html">
+        <h1 id="logo">Crisis</h1>
+       </a>
+       <nav>
+           <ul>
+               <li><a href="index.html">Home</a></li>
+               <li><a href="quiz.html">Quiz</a></li>
+               <li><a href="rules.html">Rules</a></li>
+               <li><a href="about.html">About</a></li>
+           </ul>
+       </nav>
+   </header>
    <script src="assets/js/script.js"></script> 
 </body>
 </html>
