--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="index.html">
         <h1 id="logo">Crisis</h1>
        </a>
+       <!--add nav bar here -->
        <nav>
            <ul>
                <li><a href="index.html">Home</a></li>
