Add img and style the size

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
            </ul>
        </nav>
    </header>
-   <script src="assets/js/script.js"></script> 
+   <img src="assets/images/pexels-pixabay-60013.jpg">
 </body>
 </html>
