Add about.index file

--- a/index.html
+++ b/index.html
@@ -22,5 +22,12 @@
        </nav>
    </header>
    <img src="assets/images/pexels-pixabay-60013.jpg">
+   <section>
+    <h2>This site is here to help people learn about the Climate Crisis.</h2>
+    <p>To make a difference the change is now!</p>
+   </section>
+   <footer>
+     <p>&copy;2024 We Climate Crisis. All rights reserved.<P>
+   </footer>
 </body>
 </html>
