Add nav bar + img to about

--- a/about.html
+++ b/about.html
@@ -7,6 +7,26 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Crisis</h1>
+           </a>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="quiz.html">Quiz</a></li>
+            <li><a href="rules.html">Rules</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
+    </nav>
+</header>
+<img src="assets/images/pexels-pixabay-221012.jpg" alt="pexels-pixabay">
+<section>
+ 
+</section>
+<footer>
+  <p>&copy;2024 We Climate Crisis. All rights reserved.<P>
+</footer>
     
 </body>
 </html>
