--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
            </ul>
        </nav>
    </header>
-   <img src="assets/images/pexels-pixabay-60013.jpg">
+   <img src="assets/images/pexels-pixabay-60013.jpg" alt="pexels-pixabay">
    <section>
     <h2>This site is here to help people learn about the Climate Crisis.</h2>
-    <p>To make a difference the change is now!</p>
+    <p>To make a difference the change is now!</p> 
    </section>
    <footer>
      <p>&copy;2024 We Climate Crisis. All rights reserved.<P>
