--- a/about.html
+++ b/about.html
@@ -6,27 +6,45 @@
     <title>Climate Climate</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <header>
         <a href="index.html">
             <h1 id="logo">Crisis</h1>
-           </a>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="quiz.html">Quiz</a></li>
-            <li><a href="rules.html">Rules</a></li>
-            <li><a href="about.html">About</a></li>
-        </ul>
-    </nav>
-</header>
-<img src="assets/images/pexels-pixabay-221012.jpg" alt="pexels-pixabay">
-<section>
- 
-</section>
-<footer>
-  <p>&copy;2024 We Climate Crisis. All rights reserved.<P>
-</footer>
-    
+        </a>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="quiz.html">Quiz</a></li>
+                <li><a href="rules.html">Rules</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+       
+    </header>
+    <img src="assets/images/pexels-karolina-grabowska-8106773.jpg" alt="pexels-karolina-grabowska">
+    <h1>burning fossil fuels</h1>
+    <p>Environmental pollution from fossil fuels impacts humans because particulates and other air pollution from
+        fossil fuel combustion cause illness and death when inhaled. These health effects include premature death,
+        acute respiratory illness, aggravated asthma, chronic bronchitis and decreased lung function. The poor,
+        undernourished, very young and very old, and people with preexisting respiratory disease and other ill
+        health are more at risk. Global air pollution deaths due to fossil fuels have been estimated at over 8
+        million people (2018, nearly 1 in 5 deaths worldwide) at 10.2 million (2019), and 5.13 million
+        excess deaths from ambient air pollution from fossil fuel use (2023).
+
+        While all energy sources inherently have adverse effects, the data show that fossil fuels cause the highest
+        levels of greenhouse gas emissions and are the most dangerous for human health. In contrast, modern
+        renewable energy sources appear to be safer for human health and cleaner. The death rates from accidents and
+        air pollution in the EU are as follows per terawatt-hour</p>
+    <img src="assets/images/pexels-pixabay-221012.jpg" alt="pexels-pixabay">
+    <section>
+
+    </section>
+    <footer>
+        <p>&copy;2024 We Climate Crisis. All rights reserved.
+        <P>
+    </footer>
+
 </body>
+
 </html>
