--- a/quiz.html
+++ b/quiz.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <header>
+
             <a href="index.html">
                 <h1 id="logo">Crisis</h1>
             </a>
@@ -20,7 +20,16 @@
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
+
     </header>
+
+    <h2>Are You Ready To Start The Quiz</h2>
+    <button id="start-button">Start Quiz</button>
+    <div id="quiz-container" style="display: none;"></div>
     
+    <footer>
+        <p>&copy;2024 We Climate Crisis. All rights reserved.<P>
+      </footer>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
