Make changes to functions

--- a/quiz.html
+++ b/quiz.html
@@ -11,7 +11,6 @@
 
 <body>
     <header>
-
         <a href="index.html">
             <h1 id="logo">Crisis</h1>
         </a>
@@ -23,27 +22,20 @@
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
-
     </header>
     <h2>Are You Ready To Start The Quiz</h2>
-    <div id="quiz-container" style="display: none;">
+    <div id="quiz-container">
         <div id="question"></div>
         <div id="options"></div>
         <div id="timer">Time left:
-            <span id="time">10</span>seconds
-        </div>
+            <span id="time">10</span>seconds</div>
     </div>
-    <div id="score-container" style="display: none;">
-        Correct Answer: <span id="correct-score">0</span><br>
+    <div id="score-container">Correct Answer: <span id="correct-score">0</span><br>
         Incorrect Answer: <span id="incorrect-score">0</span></div>
     <button id="start-button">Start Quiz</button>
-    <button id="restart-button" style="display: none;">Restart Quiz</button>
-
-
-
+    <button id="restart-button">Restart Quiz</button>
     <footer>
-        <p>&copy;2024 We Climate Crisis. All rights reserved.
-        <P>
+        <p>&copy;2024 We Climate Crisis. All rights reserved.</p>
     </footer>
     <script src="assets/js/script.js"></script>
 </body>
