--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Climate Crisis</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="favicon" href="assets/images/favicon.ico">
 </head>
 <body>
     <header>
