--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Climate Climate</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="favicon" href="assets/images/favicon.ico">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/favicon">
 </head>
 
 <body>
