--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Climate Climate</title>
+    <title>Climate Crisis</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="assets/images/favicon.ico" type="image/favicon">
 </head>
@@ -38,9 +38,6 @@
         renewable energy sources appear to be safer for human health and cleaner. The death rates from accidents and
         air pollution in the EU are as follows per terawatt-hour</p>
     <img src="assets/images/pexels-pixabay-221012.jpg" alt="pexels-pixabay">
-    <section>
-
-    </section>
     <footer>
         <p>&copy;2024 We Climate Crisis. All rights reserved.
         <P>
